--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,18 @@
+
 spring.application.name=demo
 # Don't change the port
 server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
 
+#mysql connectivity
 
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#hibernate connectivity
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.formate_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
