--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,12 @@
     <artifactId>spring-boot-starter-validation</artifactId>
     <version>3.5.6</version>
 </dependency>
-	
+	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.30</version>
+</dependency>
 <dependency>
     <groupId>com.mysql</groupId>
     <artifactId>mysql-connector-j</artifactId>
